scroll in globals, ace fix warning, scrollbar

--- a/src/components/Globals/Globals.scss
+++ b/src/components/Globals/Globals.scss
@@ -17,6 +17,8 @@
       width: 180px;
       background-color:#444444;
       color:#ccc;
+      overflow:auto;
+      height:500px;
     }
 
     .preview {
